CSS transition on SVG inside href fails when link already visited https://bugs.webkit.org/show_bug.cgi?id=267515 rdar://121015467

Reviewed by Antoine Quint.

* LayoutTests/transitions/svg-visited-fill-expected.html: Added.
* LayoutTests/transitions/svg-visited-fill.html: Added.
* Source/WebCore/animation/CSSPropertyAnimation.cpp:
(WebCore::PropertyWrapperVisitedAffectedSVGPaint::PropertyWrapperVisitedAffectedSVGPaint):
(WebCore::CSSPropertyAnimationWrapperMap::CSSPropertyAnimationWrapperMap):

Add an animation property wrapper for visited-affected fill/stroke similar to other color properties and use it.

* Source/WebCore/rendering/style/RenderStyle.h:
* Source/WebCore/rendering/style/SVGRenderStyle.h:
(WebCore::RenderStyle::fillPaintColor const):
(WebCore::RenderStyle::visitedFillPaintColor const):
(WebCore::RenderStyle::visitedFillPaintType const):
(WebCore::RenderStyle::setFillPaintColor):
(WebCore::RenderStyle::setVisitedFillPaintColor):
(WebCore::RenderStyle::setStrokePaintColor):
(WebCore::RenderStyle::setVisitedStrokePaintColor):
(WebCore::RenderStyle::strokePaintColor const):
(WebCore::RenderStyle::visitedStrokePaintColor const):
(WebCore::RenderStyle::visitedStrokePaintType const):

Expose some helpers for the property wrapper.

Canonical link: https://commits.webkit.org/279807@main